# resume-roaster

./: README.md
backend/: extractor.py  groq_client.py  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/components/: ChatInput.js  ChatWindow.js  FileUpload.js  LandingHero.js  MessageBubble.js  TypingIndicator.js
