[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.139.2",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "pdfplumber>=0.11.10",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.32",
]
